[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/Main Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Fifaks10Dev1.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/User Interface/UiIcons.png" type="Texture" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode unshaded;

uniform int iterations = 17;
uniform float formuparam = 0.6;

uniform int volsteps = 1;
uniform float stepsize = 0.4;

uniform float zoom = 0.1;
uniform float tile = 0.46;
uniform float speed = 0.002;

uniform float brightness = 0.001;
uniform float darkmatter = 0.003;
uniform float distfading = 0.650;
uniform float saturation = 0.450;

uniform vec2 iResolution = vec2(19, 1);
uniform vec2 iMouse = vec2(0,0);

float SCurve (float value) {

    if (value < 0.5)
    {
        return value * value * value * value * value * 10.0; 
    }
    
    value -= 1.0;
    
    return value * value * value * value * value * 10.0 + 1.0;
}

void fragment()
{
	//get coords and direction
	vec2 uv=FRAGCOORD.xy/iResolution.xy-0.5;
	uv.y*=iResolution.y/iResolution.x;
	vec3 dir=vec3(uv*zoom,1.0);
	float time=TIME*speed+.25;

	//mouse rotation
	float a1=0.5+iMouse.x/iResolution.x*2.;
	float a2=0.8+iMouse.y/iResolution.y*2.;
	mat2 rot1=mat2(vec2(cos(a1),sin(a1)),vec2(-sin(a1),cos(a1)));
	mat2 rot2=mat2(vec2(cos(a2),sin(a2)),vec2(-sin(a2),cos(a2)));
	dir.xy*=rot1;
	dir.xz*=rot2;
	vec3 from=vec3(1.0,0.5,0.5);
	from-=vec3(0.0,time,0.0);
	from.xz*=rot1;
	from.xy*=rot2;
	
	//volumetric rendering
	float s=0.1,fade=1.;
	vec3 v=vec3(0.);
	for (int r=0; r<volsteps; r++) {
		vec3 p=from+s*dir*0.5;
		p = abs(vec3(tile)-mod(p,vec3(tile*2.))); // tiling fold
		float pa,a=pa=0.;
		for (int i=0; i<iterations; i++) { 
			p=abs(p)/dot(p,p)-formuparam; // the magic formula
			a+=abs(length(p)-pa); // absolute sum of average change
			pa=length(p);
		}
		float dm=max(0.,darkmatter-a*a*.001); //dark matter
		a = pow(a, 2.3); // add contrast
		if (r>6) fade*=1.-dm; // dark matter, don't render near
		//v+=vec3(dm,dm*.5,0.);
		v+=fade;
		v+=vec3(s,s*s,s*s*s*s)*a*brightness*fade; // coloring based on distance
		fade*=distfading; // distance fading
		s+=stepsize;
	}
    
	v=mix(vec3(length(v)),v,saturation); //color adjust
    
    vec4 C = vec4(v*.01,1.);
    
     	C.r = pow(C.r, 0.35); 
 	 	C.g = pow(C.g, 0.36); 
 	 	C.b = pow(C.b, 0.38); 
 	
    vec4 L = C;   	
    
    COLOR.r = mix(L.r, SCurve(C.r), 0.7); 
    COLOR.g = mix(L.g, SCurve(C.g), 1.0); 
    COLOR.b = mix(L.b, SCurve(C.b), 0.2);     	
	
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/iterations = 17
shader_param/formuparam = 0.6
shader_param/volsteps = 1
shader_param/stepsize = 1.0
shader_param/zoom = 0.1
shader_param/tile = 0.46
shader_param/speed = 0.009
shader_param/brightness = 0.001
shader_param/darkmatter = 0.003
shader_param/distfading = 0.65
shader_param/saturation = 0.45
shader_param/iResolution = Vector2( 19, 1 )
shader_param/iMouse = Vector2( 0, 0 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Spheres:material:shader_param/iMouse")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spheres:material:shader_param/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.001 ]
}

[sub_resource type="Animation" id=4]
resource_name = "def"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Spheres:material:shader_param/brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.002, -0.002, 0.002 ]
}

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=17]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=9]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )
border_width_left = 5
border_width_top = 5
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 1 )
shadow_size = 11

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 0.901961 )
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 0.498039 )

[sub_resource type="Animation" id=16]
resource_name = "def"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Text:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 9, 12, 12 ]
}

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 1, 113, 14, 14 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 49, 49, 14, 14 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Backgrounds" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Spheres" type="ColorRect" parent="Backgrounds"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 109, 950 )
color = Color( 0, 0, 0, 1 )

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Animation" type="AnimationPlayer" parent="Main"]
root_node = NodePath("../../Backgrounds")
autoplay = "def"
playback_speed = 0.1
anims/RESET = SubResource( 3 )
anims/def = SubResource( 4 )

[node name="Scroll" type="ScrollContainer" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.5
margin_top = -300.0
margin_right = 215.5
margin_bottom = 300.0
rect_pivot_offset = Vector2( 215.5, 300 )
scroll_horizontal_enabled = false
scroll_vertical_enabled = false

[node name="Box" type="VBoxContainer" parent="Main/Scroll"]
margin_right = 400.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 600 )

[node name="Control" type="Control" parent="Main/Scroll/Box"]
margin_right = 400.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 90 )

[node name="STAT" type="Label" parent="Main/Scroll/Box"]
margin_top = 94.0
margin_right = 400.0
margin_bottom = 174.0
theme = SubResource( 6 )
text = "S.T.R.A.T."
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="Main/Scroll/Box"]
margin_top = 178.0
margin_right = 400.0
margin_bottom = 223.0
rect_min_size = Vector2( 0, 45 )
custom_fonts/font = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
align = 1
max_length = 21
placeholder_text = "Эта история о..."

[node name="PVP" type="Button" parent="Main/Scroll/Box"]
margin_top = 227.0
margin_right = 400.0
margin_bottom = 287.0
rect_pivot_offset = Vector2( 697, -66 )
focus_mode = 0
theme = SubResource( 10 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
enabled_focus_mode = 0
text = "PVP сервер"

[node name="PVE" type="Button" parent="Main/Scroll/Box"]
margin_top = 291.0
margin_right = 400.0
margin_bottom = 351.0
hint_tooltip = "Скоро!"
focus_mode = 0
theme = SubResource( 10 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
disabled = true
enabled_focus_mode = 0
text = "PVE сервер"

[node name="Settings" type="Button" parent="Main/Scroll/Box"]
visible = false
margin_top = 306.0
margin_right = 400.0
margin_bottom = 366.0
hint_tooltip = "Скоро!"
focus_mode = 0
theme = SubResource( 10 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
disabled = true
enabled_focus_mode = 0
text = "Настройки"

[node name="Panel" type="Panel" parent="Main"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.5
margin_top = -119.0
margin_right = 136.5
margin_bottom = 119.0
rect_pivot_offset = Vector2( 136.5, 119 )
custom_styles/panel = SubResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Main/Panel"]
autoplay = "def"
anims/def = SubResource( 16 )

[node name="Text" type="Label" parent="Main/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.5
margin_top = -119.0
margin_right = -81.5
margin_bottom = -71.0
rect_scale = Vector2( 5, 5 )
text = "Ищу 
сервер
..."
align = 1
valign = 1
percent_visible = 0.916667

[node name="Error" type="Label" parent="Main/Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.5
margin_top = -119.0
margin_right = -38.5
margin_bottom = -34.0
rect_scale = Vector2( 2.8, 2.8 )
text = "Ошибка =(

Сервер
не обрабатывает
этот режим"
align = 1
valign = 1

[node name="Stop" type="Button" parent="Main/Panel"]
margin_left = 2.0
margin_top = 248.0
margin_right = 272.0
margin_bottom = 308.0
focus_mode = 0
theme = SubResource( 10 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 11 )
enabled_focus_mode = 0
text = "Отменить"

[node name="Error" type="Panel" parent="Main"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.5
margin_top = -119.0
margin_right = 136.5
margin_bottom = 119.0
rect_pivot_offset = Vector2( 136.5, 119 )
custom_styles/panel = SubResource( 15 )

[node name="Title" type="Label" parent="Main/Error"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.5
margin_top = -119.0
margin_right = -81.5
margin_bottom = -71.0
rect_scale = Vector2( 5, 5 )
text = "Ошибка:

"
align = 1
valign = 1

[node name="What" type="Label" parent="Main/Error"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.5
margin_top = -54.0
margin_right = -46.5
margin_bottom = 3.0
rect_scale = Vector2( 3, 3 )
text = "Сервер не имеет такого режима игры"
align = 1
valign = 1
autowrap = true

[node name="Exit" type="TextureButton" parent="Main"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -90.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 90.0
texture_normal = SubResource( 7 )
texture_pressed = SubResource( 8 )
expand = true

[node name="Request" type="HTTPRequest" parent="."]

[connection signal="text_changed" from="Main/Scroll/Box/LineEdit" to="." method="name_user_changed"]
[connection signal="pressed" from="Main/Scroll/Box/PVP" to="." method="PVP_pressed"]
[connection signal="pressed" from="Main/Panel/Stop" to="." method="stop_search"]
[connection signal="pressed" from="Main/Exit" to="." method="exit"]
[connection signal="request_completed" from="Request" to="." method="request_completed"]
